--- a/deploy/runtime/help/html/default.css
+++ b/deploy/runtime/help/html/default.css
@@ -29,7 +29,7 @@ span.f_CHInterfaceElement /* CH Interface Element */
 }
 span.f_CHNote /* CH Note */
 {
- text-decoration: underline;
+ font-weight: bold;
 }
 span.f_CHUIElement /* CH UI Element */
 {
